--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -156,7 +156,7 @@ data "aws_iam_policy_document" "this" {
     ]
 
     resources = [
-      "Resource": "*",
+      "Resource": "*"
     ]
   }
 }
