--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -166,9 +166,9 @@ resource "aws_iam_policy" "this" {
   policy      = "${data.aws_iam_policy_document.this.json}"
 }
 
-resource "aws_iam_policy_attachment" "kube-node-AmazonEKSEXTDNSPolicy" {
+resource "aws_iam_role_policy_attachment" "kube-node-AmazonEKSEXTDNSPolicy" {
   policy_arn = "${aws_iam_policy.this.arn}"
-  role       = "${aws_iam_role.kube-node.name}"
+  roles      = "${aws_iam_role.kube-node.name}"
 }
 
 resource "aws_iam_role_policy_attachment" "kube-node-AmazonEKSWorkerNodePolicy" {
