--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -168,7 +168,7 @@ resource "aws_iam_policy" "this" {
 
 resource "aws_iam_role_policy_attachment" "kube-node-AmazonEKSEXTDNSPolicy" {
   policy_arn = "${aws_iam_policy.this.arn}"
-  roles      = "${aws_iam_role.kube-node.name}"
+  role      = "${aws_iam_role.kube-node.name}"
 }
 
 resource "aws_iam_role_policy_attachment" "kube-node-AmazonEKSWorkerNodePolicy" {
