--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -3,10 +3,12 @@ provider "aws" {
     alias = "{{ aws_region }}"
 }
 
+{% if aws_region != "us-east-1" %}
 provider "aws" {
     region = "us-east-1"
     alias = "us-east-1"
 }
+{% endif %}
 
 ##### ecs #####
 
