--- a/templates/cloudfront_for_s3.tf.j2
+++ b/templates/cloudfront_for_s3.tf.j2
@@ -52,21 +52,23 @@ resource "aws_cloudfront_distribution" "website_cdn" {
     Name = "tf-cf-s3-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
   }
 
-  {% if project_cloudfront_for_s3_certificate == true %}
-  viewer_certificate {
+{% if project_cloudfront_for_s3_certificate == true %}
+  "viewer_certificate" {
+  {% if aws_region != 'us-east-1' %}
     acm_certificate_arn = "${aws_acm_certificate.us-east-1.arn}"
-    ssl_support_method = "sni-only"
+  {% else %}
+    acm_certificate_arn = "${aws_acm_certificate.default.arn}"
+  {% endif %}
+    ssl_support_method       = "sni-only"
     minimum_protocol_version = "TLSv1"
   }
-  {% endif %}
-
+    depends_on = ["aws_acm_certificate_validation.default"]
+{% endif %}
 
   {% if project_deployment_environment == 'prod' or skip_env_domain_prefix == true %}
     aliases = ["{{ domain_url }}"]
   {% else %}
     aliases = ["{{ project_deployment_environment }}.{{ domain_url }}"]
   {% endif %}
-
-  depends_on = ["aws_acm_certificate_validation.default"]
 
 }
