--- a/templates/elasticache.tf.j2
+++ b/templates/elasticache.tf.j2
@@ -6,6 +6,7 @@ resource "aws_elasticache_replication_group" "this" {
   port                          = {{ elasticache_port }}
   parameter_group_name          = "{{ elasticache_parameter_group_name }}"
   availability_zones = ["${data.aws_availability_zones.available.names[0]}", "${data.aws_availability_zones.available.names[1]}", "${data.aws_availability_zones.available.names[2]}"]
+  engine_version                 = "{{ elasticache_engine_version }}"
   subnet_group_name = "${aws_elasticache_subnet_group.this.name}"
   automatic_failover_enabled    = false
   security_group_ids = ["${aws_security_group.this.id}", "${aws_security_group.redis.id}"]
